--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-<a href="    https://familiatv-10.mrriskplot2.repl.co/index-1.htm "> 
+<a href="    https://www.huhu.to/ "> 
  <IMG src="  https://i.postimg.cc/tJvNjMs9/IMG-20230621-203706.jpg " width=184 height="184">
 </a>
 
