--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-<a href="    https://hurtotudra1.foroactivo.com/h1-agenda4zpKDf_UJTtZPyffxeWvJWXtuYmyfds12f7zp92DSP6N3M0VTb9WziIwv1o9Vq-s/hls/index.m3u8 "> 
+<a href="    https://titrihofya3.foroactivo.com/h1-agenda "> 
  <IMG src="  https://i.postimg.cc/tJvNjMs9/IMG-20230621-203706.jpg " width=184 height="184">
 </a>
 
