--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 
-<a href="    https://streamtp3.com/global1.php?stream=movistarligadecampeones ">
+<a href="    https://24a.pricesaskeloadsc.com/global/movistarligadecampeones/index.m3u8?token=b17167ae6cadf272786396c3f3e5b9549a210069-d2-1741651249-1741618849 ">
    <IMG src=" https://img.freepik.com/vector-gratis/fondo-eventos-deportivos-cancelados_23-2148570952.jpg" width=184 height="184">
 </a>
 
