--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 
-<a href="    https://streamdz2.com/ ">
+<a href="    https://shickat.me/WikiShickatPrueba98398/ ">
    <IMG src=" https://img.freepik.com/vector-gratis/fondo-eventos-deportivos-cancelados_23-2148570952.jpg" width=184 height="184">
 </a>
 
